change lore dep

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div id="article_info"></div>
         <canvas id="lore"></canvas>
-        <script src="dependencies/lore.min.js"></script>
+        <script src="dependencies/lore.js"></script>
         <script src="dependencies/pako.min.js"></script>
         <script src="dependencies/jquery-3.6.0.min.js"></script>
         <script src="dependencies/chosen.jquery.min.js"></script>
