--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </select>
             </div>
         </div>
-        <div id="article_info"></div>
+        <div id="articleInfo"></div>
         <canvas id="lore"></canvas>
         <script src="dependencies/lore.js"></script>
         <script src="dependencies/pako.min.js"></script>
