--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 height: 100%;
             }
 
-            #article_info {
+            #articleInfo {
                 display: none;
                 position: absolute;
                 pointer-events: none;
