add article info etc

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             #articleInfo {
                 display: none;
                 position: absolute;
+                pointer-events:none;
                 z-index: 10002,
                 left: 0;
                 top: 0;
