add article info etc

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 color: #000;
                 font-family: Arial, Helvetica, sans-serif;
                 text-align: right;
+                padding: 4px 4px 4px 4px;
             }
 
             #controls {
@@ -250,7 +251,7 @@
             </button><br><br>
             <table style="width:100%">
                 <tr>
-                  <th class="leftCol">Index:</th>
+                  <th class="leftCol">ID:</th>
                   <th id="doiValue" class="rightCol"></th>
                 </tr>
                 <tr>
