--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
             }
 
             .leftCol {
-                font-style: normal;
-                text-decoration: underline;
+                font-style: oblique;
                 width: 20%;
                 vertical-align: top;
                 padding: 4px 4px 4px 4px;
