--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                 display: none;
                 position: absolute;
                 pointer-events:none;
-                z-index: 10002,
-                left: 0;
-                top: 0;
+                z-index: 10002;
                 font-size: 0.8em;
                 width: 500px;
                 height: auto;
@@ -55,7 +53,6 @@
                 border-radius: 5px;
                 padding: 5px;
                 text-align: left;
-                z-index: 10002,
                 float: right;
                 position: absolute;
                 top: 10px;
@@ -71,7 +68,6 @@
                 border-radius: 5px;
                 padding: 5px;
                 text-align: left;
-                z-index: 10002,
                 float: right;
                 position: absolute;
                 top: 100px;
